--- a/index.html
+++ b/index.html
@@ -7,10 +7,132 @@
   <title>My resume</title>
 </head>
 <body>
-  <h1>Hello world</h1>
-  <h2>Hello world</h2>
-  <h3>Hello world</h3>
-  <h4>Hello world</h4>
-  <h5>Hello world</h5>
+  <!-- Main section -->
+  <div>
+    <!-- Main content section -->
+    <div>
+      <!-- About me section -->
+      <div>
+        <h2>Front-End Developer</h2>
+        <h1>Yaroslav Khamulyak</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+      </div>
+      <!-- My projects section -->
+      <div>
+        <h3>Projects</h3>
+        <ol>
+          <li>
+            <a href="https://hellenglish.goit.education/">https://hellenglish.goit.education/</a> 
+            <span>..........</span>
+            <span>[ HTML5, CSS3 ]</span> 
+          </li>
+          <li>
+            <a href="https://kidslike.goit.global/">https://kidslike.goit.global/</a> 
+            <span>....................</span>
+            <span>[ JavaScript ]</span> 
+          </li>
+          <li>
+            <a href="https://cryptohub.goit.global/">https://cryptohub.goit.global/</a> 
+            <span>.................</span>
+            <span>[ React.js, Node.js ]</span> 
+          </li>
+        </ol>
+      </div>
+      <!-- My work experience section -->
+      <h3>Work Experience</h3>
+
+      <!-- Company 3 -->
+      <div>
+        <h4>Front-End Developer Freelance</h4>
+        <p>September 2019 - up to now   |   Country</p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Risus commodo viverra maecenas.</li>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
+        </ul>
+      </div>
+
+      <!-- Company 2 -->
+      <div>
+        <h4>Manager Roga & Kopyta New</h4>
+        <p>March 2015 - October 2018   |   Country</p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li> 
+          <li>Quis ipsum suspendisse ultrices gravida.</li>
+          <li>Risus commodo viverra maecenas.</li> 
+        </ul>
+      </div>
+
+      <!-- Company 1 -->
+      <div>
+        <h4>Manager Roga & Kopyta LLC</h4>
+        <p>June 2014 - February 2015   |   Country</p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li> 
+          <li>Quis ipsum suspendisse ultrices gravida.</li>
+          <li>Risus commodo viverra maecenas.</li> 
+        </ul>
+      </div>
+
+      <!-- My education section -->
+      <div>
+        <h3>Education</h3>
+        <h4>National University of Radioelectronics</h4>
+        <h4>Management</h4>
+        <p>September 2009 - June 2014   |   Country</p>
+      </div>
+
+    </div>
+
+
+
+    <!-- Sidebar section -->
+    <aside>
+      <img src="img/Я.jpg" alt="My photo">
+
+      <!-- Contacts section -->
+      <div>
+        <h3>Contacts</h3>
+        <div>
+          <span>C:</span>
+          <a href="tel:+77777777777">+7 777 777 77 77</a> 
+        </div>
+        <div>
+          <span>E:</span>
+          <a href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a> 
+        </div>
+
+      <!-- Tech skills section -->
+      <div>
+        <h3>Tech Skills</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>GIT</li>
+          <li>WebPack</li>
+          <li>JavaScript</li>
+          <li>React.js</li>
+          <li>Node.js</li>
+        </ul>
+      </div>
+
+      <!-- Soft skills section -->
+      <div>
+        <h3>Soft Skills</h3>
+        <ul>
+          <li>Scrum</li>
+          <li>Agile</li>
+          <li>GTD</li>
+          <li>Teamwork</li>
+        </ul>
+      </div>
+        
+
+      </div>
+    </aside>
+
+  </div>
 </body>
 </html>
