--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My resume</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Main section -->
-  <div>
+  <div class="main-section">
     <!-- Main content section -->
-    <div>
+    <div class="main-content-section">
       <!-- About me section -->
-      <div>
-        <h2>Front-End Developer</h2>
+      <div class="about-me-section">
+        <h2 class="about-me-profession">Front-End Developer</h2>
         <h1>Yaroslav Khamulyak</h1>
-
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
       </div>
+
       <!-- My projects section -->
-      <div>
+      <div class="my-projects-section">
         <h3>Projects</h3>
         <ol>
-          <li>
+          <li class="projects-item">
             <a href="https://hellenglish.goit.education/">https://hellenglish.goit.education/</a> 
             <span>..........</span>
             <span>[ HTML5, CSS3 ]</span> 
@@ -39,45 +43,45 @@
           </li>
         </ol>
       </div>
+
       <!-- My work experience section -->
-      <h3>Work Experience</h3>
-
-      <!-- Company 3 -->
-      <div>
-        <h4>Front-End Developer Freelance</h4>
-        <p>September 2019 - up to now   |   Country</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Risus commodo viverra maecenas.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
-        </ul>
-      </div>
-
-      <!-- Company 2 -->
-      <div>
-        <h4>Manager Roga & Kopyta New</h4>
-        <p>March 2015 - October 2018   |   Country</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li> 
-          <li>Quis ipsum suspendisse ultrices gravida.</li>
-          <li>Risus commodo viverra maecenas.</li> 
-        </ul>
-      </div>
-
-      <!-- Company 1 -->
-      <div>
-        <h4>Manager Roga & Kopyta LLC</h4>
-        <p>June 2014 - February 2015   |   Country</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li> 
-          <li>Quis ipsum suspendisse ultrices gravida.</li>
-          <li>Risus commodo viverra maecenas.</li> 
-        </ul>
+      <div class="my-work-experience-section">
+        <h3>Work Experience</h3>
+        <!-- Company 3 -->
+        <div>
+          <h4>Front-End Developer Freelance</h4>
+          <p>September 2019 - up to now   |   Country</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>Risus commodo viverra maecenas.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
+          </ul>
+        </div>
+        <!-- Company 2 -->
+        <div>
+          <h4>Manager Roga & Kopyta New</h4>
+          <p>March 2015 - October 2018   |   Country</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li> 
+            <li>Quis ipsum suspendisse ultrices gravida.</li>
+            <li>Risus commodo viverra maecenas.</li> 
+          </ul>
+        </div>
+        <!-- Company 1 -->
+        <div>
+          <h4>Manager Roga & Kopyta LLC</h4>
+          <p>June 2014 - February 2015   |   Country</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li> 
+            <li>Quis ipsum suspendisse ultrices gravida.</li>
+            <li>Risus commodo viverra maecenas.</li> 
+          </ul>
+        </div>
       </div>
 
       <!-- My education section -->
-      <div>
+      <div class="my-education-section">
         <h3>Education</h3>
         <h4>National University of Radioelectronics</h4>
         <h4>Management</h4>
@@ -86,53 +90,47 @@
 
     </div>
 
-
-
     <!-- Sidebar section -->
-    <aside>
+    <aside class="sidebar-section">
       <img src="img/Я.jpg" alt="My photo">
 
       <!-- Contacts section -->
-      <div>
-        <h3>Contacts</h3>
+      <div class="contacts-section">
+        <h3 class="sidebar-title">Contacts</h3>
         <div>
-          <span>C:</span>
-          <a href="tel:+77777777777">+7 777 777 77 77</a> 
+          <span class="contacts-section-type">C:</span>
+          <a class="contacts-section-link" href="tel:+77777777777">+7 777 777 77 77</a> 
         </div>
         <div>
-          <span>E:</span>
-          <a href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a> 
+          <span class="contacts-section-type">E:</span>
+          <a class="contacts-section-link" href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a> 
         </div>
-
+      </div>
       <!-- Tech skills section -->
-      <div>
-        <h3>Tech Skills</h3>
-        <ul>
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>GIT</li>
-          <li>WebPack</li>
-          <li>JavaScript</li>
-          <li>React.js</li>
-          <li>Node.js</li>
+      <div class="tech-skills-section">
+        <h3 class="sidebar-title">Tech Skills</h3>
+        <ul class="skills-section-list">
+          <li class="skills-section-item"> <span class="skills-section-item-text">HTML5</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">CSS3</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">GIT</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">WebPack</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">JavaScript</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">React.js</span></li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">Node.js</span></li>
         </ul>
       </div>
 
       <!-- Soft skills section -->
-      <div>
-        <h3>Soft Skills</h3>
-        <ul>
-          <li>Scrum</li>
-          <li>Agile</li>
-          <li>GTD</li>
-          <li>Teamwork</li>
+      <div class="soft-skills-section">
+        <h3 class="sidebar-title">Soft Skills</h3>
+        <ul class="skills-section-list">
+          <li class="skills-section-item"> <span class="skills-section-item-text">Scrum</li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">Agile</li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">GTD</li>
+          <li class="skills-section-item"> <span class="skills-section-item-text">Teamwork</li>
         </ul>
       </div>
-        
-
-      </div>
     </aside>
-
   </div>
 </body>
 </html>
