--- a/index.html
+++ b/index.html
@@ -18,74 +18,80 @@
       <!-- About me section -->
       <div class="about-me-section">
         <h2 class="about-me-profession">Front-End Developer</h2>
-        <h1>Yaroslav Khamulyak</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        <h1 class="about-me-name">Yaroslav Khamulyak</h1>
+        <p class="about-me-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
       </div>
 
       <!-- My projects section -->
       <div class="my-projects-section">
-        <h3>Projects</h3>
-        <ol>
+        <h3 class="main-content-title">Projects</h3>
+        <ol class="my-projects-list">
           <li class="projects-item">
-            <a href="https://hellenglish.goit.education/">https://hellenglish.goit.education/</a> 
-            <span>..........</span>
-            <span>[ HTML5, CSS3 ]</span> 
+              <span class="projects-text">
+              <a href="https://hellenglish.goit.education/" class="projects-link">https://hellenglish.goit.education/</a> 
+              ..........
+              <span class="projects-bracket">[</span> HTML5, CSS3 <span class="projects-bracket">]</span> 
+            </span>
           </li>
-          <li>
-            <a href="https://kidslike.goit.global/">https://kidslike.goit.global/</a> 
-            <span>....................</span>
-            <span>[ JavaScript ]</span> 
+          <li class="projects-item">
+            <span class="projects-text">
+            <a href="https://kidslike.goit.global/" class="projects-link">https://kidslike.goit.global/</a> 
+            ............................
+            <span class="projects-bracket">[</span> JavaScript <span class="projects-bracket">]</span> 
+            </span>
           </li>
-          <li>
-            <a href="https://cryptohub.goit.global/">https://cryptohub.goit.global/</a> 
-            <span>.................</span>
-            <span>[ React.js, Node.js ]</span> 
+          <li class="projects-item">
+            <span class="projects-text">
+            <a href="https://cryptohub.goit.global/" class="projects-link">https://cryptohub.goit.global/</a> 
+            .....................
+            <span class="projects-bracket">[</span> React.js, Node.js <span class="projects-bracket">]</span> 
+            </span>
           </li>
         </ol>
       </div>
 
       <!-- My work experience section -->
       <div class="my-work-experience-section">
-        <h3>Work Experience</h3>
-        <!-- Company 3 -->
-        <div>
-          <h4>Front-End Developer Freelance</h4>
-          <p>September 2019 - up to now   |   Country</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Risus commodo viverra maecenas.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
+        <h3 class="main-content-title">Work Experience</h3>
+        <!-- Company 1 -->
+        <div class="my-work-experience-company-1">
+          <h4 class="my-work-experience-position">Front-End Developer <span class="my-work-experience-company">Freelance</span></h4>
+          <p class="my-work-experience-time">September 2019 - up to now  <span class="my-work-experience-divider">|</span>    Country</p>
+          <ul class="my-work-experience-duties">
+            <li class="my-work-experience-duty">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
+            <li class="my-work-experience-duty">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li class="my-work-experience-duty">Risus commodo viverra maecenas.</li>
+            <li class="my-work-experience-duty">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
           </ul>
         </div>
         <!-- Company 2 -->
-        <div>
-          <h4>Manager Roga & Kopyta New</h4>
-          <p>March 2015 - October 2018   |   Country</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li> 
-            <li>Quis ipsum suspendisse ultrices gravida.</li>
-            <li>Risus commodo viverra maecenas.</li> 
+        <div class="my-work-experience-company-2">
+          <h4 class="my-work-experience-position">Manager <span class="my-work-experience-company">Roga & Kopyta New</span></h4>
+          <p class="my-work-experience-time">March 2015 - October 2018   <span class="my-work-experience-divider">|</span>   Country</p>
+          <ul class="my-work-experience-duties">
+            <li class="my-work-experience-duty">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li> 
+            <li class="my-work-experience-duty">Quis ipsum suspendisse ultrices gravida.</li>
+            <li class="my-work-experience-duty">Risus commodo viverra maecenas.</li> 
           </ul>
         </div>
-        <!-- Company 1 -->
-        <div>
-          <h4>Manager Roga & Kopyta LLC</h4>
-          <p>June 2014 - February 2015   |   Country</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li> 
-            <li>Quis ipsum suspendisse ultrices gravida.</li>
-            <li>Risus commodo viverra maecenas.</li> 
+        <!-- Company 3 -->
+        <div class="my-work-experience-company-3">
+          <h4 class="my-work-experience-position">Manager <span class="my-work-experience-company">Roga & Kopyta LLC</span></h4>
+          <p class="my-work-experience-time">June 2014 - February 2015   <span class="my-work-experience-divider">|</span>   Country</p>
+          <ul class="my-work-experience-duties">
+            <li class="my-work-experience-duty">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li> 
+            <li class="my-work-experience-duty">Quis ipsum suspendisse ultrices gravida.</li>
+            <li class="my-work-experience-duty">Risus commodo viverra maecenas.</li> 
           </ul>
         </div>
       </div>
 
       <!-- My education section -->
       <div class="my-education-section">
-        <h3>Education</h3>
-        <h4>National University of Radioelectronics</h4>
-        <h4>Management</h4>
-        <p>September 2009 - June 2014   |   Country</p>
+        <h3 class="main-content-title">Education</h3>
+        <h4 class="my-education-section-position">National University of Radioelectronics</h4>
+        <h4 class="my-education-section-profession">Management</h4>
+        <p class="my-work-experience-time">September 2009 - June 2014   <span class="my-work-experience-divider">|</span>   Country</p>
       </div>
 
     </div>
